// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the FeedItemCard CardImage component should render 1`] = `
<View
  style={Object {}}
>
  <Image
    source={
      Array [
        Object {
          "uri": "https://picsum.photos/600/400/?random",
          "url": "https://picsum.photos/600/400/?random",
        },
      ]
    }
    style={
      Object {
        "aspectRatio": 1,
        "resizeMode": "cover",
        "width": "100%",
      }
    }
  />
</View>
`;

exports[`the FeedItemCard CardImage component should render with an overlayColor 1`] = `
<View
  style={Object {}}
>
  <Image
    source={
      Array [
        Object {
          "uri": "https://picsum.photos/600/400/?random",
          "url": "https://picsum.photos/600/400/?random",
        },
      ]
    }
    style={
      Object {
        "aspectRatio": 1,
        "resizeMode": "cover",
        "width": "100%",
      }
    }
  />
  <ExponentLinearGradient
    colors={
      Array [
        16416882,
        4294606962,
      ]
    }
    end={
      Array [
        0,
        1,
      ]
    }
    locations={
      Array [
        0.3,
        1,
      ]
    }
    start={
      Array [
        0,
        0,
      ]
    }
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  />
</View>
`;
